# ciagen

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  README.md  config.yaml  docker-compose.yaml  fix_pyfeat.py  mkdocs.yml  pyproject.toml  requirements.all.txt  requirements.txt  requirements.venv.txt  run.py  run.sh  run_and_build_docker_file.sh
.github/workflows/: docs.yml  release.yml  tests.yml
CIA/03CB1F_lllyasviel_canny_0.1/: args.yaml
CIA/12A90B_lllyasviel_canny_0.1/: args.yaml
CIA/14DBFD_lllyasviel_canny_0.1/: args.yaml  events.out.tfevents.1725012771.ULB-PC.22360.0
CIA/1CC713_lllyasviel_canny_0.1/: args.yaml  events.out.tfevents.1725012295.ULB-PC.5780.0
CIA/1ED17F_lllyasviel_canny_0.1/: args.yaml  events.out.tfevents.1725010807.ULB-PC.4124.0
CIA/21502E_lllyasviel_canny_0.1/: args.yaml  events.out.tfevents.1725010168.ULB-PC.4076.0
CIA/23154A_lllyasviel_canny_0.1/: args.yaml
CIA/294262_lllyasviel_canny_0.1/: args.yaml  events.out.tfevents.1725028731.ULB-PC.21796.0
CIA/2DB4CB_lllyasviel_canny_0.1/: args.yaml  events.out.tfevents.1725012664.ULB-PC.14320.0
CIA/36DF23_lllyasviel_canny_0.1/: args.yaml  events.out.tfevents.1725010344.ULB-PC.15296.0
CIA/438A79_lllyasviel_canny_0.1/: args.yaml  events.out.tfevents.1725026382.ULB-PC.22376.0
CIA/4A2534_lllyasviel_canny_0.1/: args.yaml  events.out.tfevents.1725011806.ULB-PC.19928.0
CIA/4A9F44_lllyasviel_canny_0.1/: args.yaml  events.out.tfevents.1725011672.ULB-PC.9392.0
CIA/4C52AD_lllyasviel_canny_0.1/: args.yaml  events.out.tfevents.1725016154.ULB-PC.19756.0
CIA/51A012_lllyasviel_canny_0.1/: args.yaml
CIA/51EE53_lllyasviel_canny_0.1/: args.yaml  events.out.tfevents.1725027936.ULB-PC.7712.0
CIA/52C2B9_lllyasviel_canny_0.1/: args.yaml  (+1 more)
CIA/src/: auc_extractor.py  (+3 more)
ciagen/: __init__.py  _cli.py  hydra_compat.py
docs/: captioning.md  cli.md  configuration.md  contributing.md  evaluation.md  examples.md  filtering.md  generation.md  index.md  installation.md  pipeline.md  quickstart.md  results.md
examples/: clip_test.ipynb  clip_test_2.ipynb  frechet_inception_distance.ipynb  inception_score.ipynb  mix_fer_dataset.py  mix_yolo_dataset.py  prepare_coco.py  prepare_fer.py  prepare_flickr30k.py  prepare_mocs.py  train_classifier.py  train_yolo.py  wasserstein_distance.ipynb
notebooks/: CIA_Quickstart.ipynb
tests/: test_structure.py
(+178 files in other folders)
